DisableExplicitGCDemo.java